# algorithm-sensei

./: .env.sample  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
app/: crud.py  initial_data.py  main.py  models.py  utils.py
app/alembic/: env.py
app/alembic/versions/: 063cf102efaf_add_chapter_num_to_chapter.py  13dc025dd8e3_initialize_db.py  191174a51200_replace_hardcoded_created_at_and_.py  2f77334a0b4f_change_course_description_to_text.py  5264a5b1707d_add_completed_to_chapter.py  5c2d4ff10905_adjust_chapter_nullability.py  7352d1b7385a_add_usercourse_associationtable_for_.py  90029038f211_initialize_db.py  92163a06c402_add_test_code_to_chapter.py  abef593b406c_make_course_title_unique.py  d5f486e4d318_initialize_db.py  df7a2d2dc0fe_initialize_db.py  f99e09d512c6_create_initial_database_schema.py
app/api/: deps.py  exceptions.py  main.py
app/api/routes/: ai_tutor.py  chapter_points.py  chapters.py  courses.py  items.py  login.py  piston_api.py  private.py  stats.py  users.py  utils.py
app/core/: config.py  db.py  security.py
app/models/: __init__.py  ai_models.py  base.py  chapters.py  courses.py  piston_api.py  stats.py  user_courses.py  users.py  utils.py
app/models_prelaminary/: __init__.py  chapters.py  courses.py  user_courses.py  users.py  utils.py
app/services/: ai_agent.py  ai_config.py
